  Some code cleanup and inner class renamings
  Removed the unholy mess that was property builder generics
  Further property builder refactoring
  DefaultProperty, bug fixed, used lambda for defaultValueProvider, which caused serialization problems
  Entity.Definition.getColumnProperties() parameter now List instead of Collection, implementation now uses old fashioned loop instead of stream
  Conditions.customCondition() parameter ordering changed
  Gradle asciidoctor plugin added, some doc changes
  jersey-bundle dependency replaced in framework-servlet module, was causing javadoc errors
  REPORT_PATH configuration value moved from EntityApplicationModel to ReportWrapper
  Entity.getBackgroundColor() renamed to getColor()
  Conditions refactoring
  DefaultLocalEntityConnection refactored
  Further refactoring of DefaultLocalEntityConnection
  Domain.getDefinedEntities() now returns Collection<Entity.Definition>, rename to getEntityDefinitions()
  Conditions refactoring continued, shuffling complexity around it seems
  WhereCondition.getPropertyIds() removed, usage replace with getColumnProperties()
  DefaultLocalEntityConnection.writeBlob() now throws exception if multiple rows were affected, refactoring
  Condition.expand() removed, functionality moved to WhereCondition
  PropertyCondition.setCaseSensitive() added
  Serializer removed
  DefaultLocalEntityConnection constructor simplified, LocalEntityConnection setters made fluent
  Entities.getOriginalKeys() added, old getKeys() with originalValue boolean parameter now private
  Entities.getValues() and getDistinctValues() streamlined, getDistinctValuesIncludingNull() added
  EntityConnection.selectMany() renamed to select()
  Entity.ConditionProvider.getConditionString(), propertyIds parameter added
  WhereCondition moved from db-local to db.condition in db-core, now an interface, Conditions.whereCondition() added